@@ -2,3 +2,5 @@ See ChangeLog for more.
 
 * 1.3.8
 
+Global variable *clm-output-device* removed from
+examples/site-lib/clm.fs.
